fix scrollTop on safari (possibly others) tweak angle add server worker support

--- a/app/styles/_gesture-slider.scss
+++ b/app/styles/_gesture-slider.scss
@@ -11,7 +11,7 @@ $transition-duration: 0.2s;
     overflow: hidden;
 
     &.previous, &.next {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       max-height: 100vh;
